small changes fixing the format

--- a/wirkungsgrad.tex
+++ b/wirkungsgrad.tex
@@ -198,7 +198,7 @@ Funktionsweise der Solarzelle ist in folgender
 		\includegraphics[width =0.8\textwidth]{./figures/solarzelle_grundlagen.PNG}
 	\end{center}
 	\caption[Schematische Funktionsweise der Solarzelle]{Schematische Funktionsweise der
-		Solarzelle \cite{unterlagen_solarzelle}
+		Solarzelle~\cite{unterlagen_solarzelle}
 	}\label{fig:solarzelle_grundlagen}
 \end{figure}
 
@@ -489,7 +489,7 @@ mithilfe der erfassten Metadaten des Smartphones die genaue Zeit notiert.
 		entsprechenden Zeit                                            \\
 		$t$ \dots vergangene Zeit seit dem Start des Messvorgangs in s \\
 		$p_k$ \dots abgelesener Druck auf der kalten Seite in bar      \\
-		$p_h$ \dots abgelesener Druck auf der heißen Seite in bar\\
+		$p_h$ \dots abgelesener Druck auf der heißen Seite in bar
 	}
 	\centering
 	\include{./tables/messreihe_werte_druck}
