--- a/wirkungsgrad.tex
+++ b/wirkungsgrad.tex
@@ -801,6 +801,13 @@ wiederspiegelt.
 
 \subsubsection{Messung der Dunkelkennlinie}
 
+Nun wird die Dunkelkennlinie bestimmmt, dabei wurde bei den aufgenommen Daten
+die Werte mit einer Spannung unter \SI{0.15}{\volt} verworfen, da zunächst der
+Tail zu großen Einfluss auf den Fit. Die Kurve hat viel zu spät zum Steigen
+begonnen und damit den dynamischen Teil nicht richtig beschrieben. Deshalb
+wurde auch nur der interpolierte Bereich geplottet und es wurde nichts
+extrapoliert.
+
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.95\textwidth]{figures/dunkelkennlinie.pdf}
