Solarzellen teil 2 grob fertig

--- a/wirkungsgrad.tex
+++ b/wirkungsgrad.tex
@@ -811,27 +811,72 @@ extrapoliert.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.95\textwidth]{figures/dunkelkennlinie.pdf}
-	\caption{}\label{fig:ausw_kennlinie_dunkel}
+	\caption[Dunkelkennlinie einer Solarzelle]{Untersuchung der Strom-Spannungs Kennlinie
+		(links) und Leistungskennlinie (rechts) bei keiner Belichtung der Solarzelle.
+		Folgende Größen wurden errechnet und um Effizienz für diese Konfiguration
+		besser vergleichen zu können auch angeführt: \\
+		$P_\text{MPP} \dots$ Leistung am MPP         \\
+		$I_\text{MPP} \dots$ Strom am MPP            \\
+		$U_\text{MPP} \dots$ Spannung am MPP         \\
+		$P_0 \dots$ Zugeführte Strahlungsfluss       \\
+		$\eta \dots$ Wirkungsgrad
+	}\label{fig:ausw_kennlinie_dunkel}
 \end{figure}
 
 \subsubsection{Messung der Hellkennlinie und Bestimmung des Wirkungsgrades}
 
+Für die Hellkennlinien musst der Tail nicht weniger gewichtet, die Fits haben
+auch so zu einem sinnvollen Ergebnis konvergiert.
+
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.95\textwidth]{figures/helllampe.pdf}
-	\caption{}\label{fig:ausw_kennlinie_hell_lampe}
+	\caption{Untersuchung der Strom-Spannungs Kennlinie
+		(links) und Leistungskennlinie (rechts) bei einer
+		Bestrahlungsstärke der Solarzelle von \SI{250(30)}{\watt\per\meter\squared}
+		mittels einer Halogenlampe.
+		Folgende Größen wurden errechnet und um Effizienz für diese Konfiguration
+		besser vergleichen zu können auch angeführt: \\
+		$P_\text{MPP} \dots$ Leistung am MPP         \\
+		$I_\text{MPP} \dots$ Strom am MPP            \\
+		$U_\text{MPP} \dots$ Spannung am MPP         \\
+		$P_0 \dots$ Zugeführte Strahlungsfluss       \\
+		$\eta \dots$ Wirkungsgrad
+	}\label{fig:ausw_kennlinie_hell_lampe}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.95\textwidth]{figures/helllampe2.pdf}
-	\caption{}\label{fig:ausw_kennlinie_hell_lampe2}
+	\caption{Untersuchung der Strom-Spannungs Kennlinie
+		(links) und Leistungskennlinie (rechts) bei einer
+		Bestrahlungsstärke der Solarzelle von \SI{420(60)}{\watt\per\meter\squared}
+		mittels einer Halogenlampe.
+		Folgende Größen wurden errechnet und um Effizienz für diese Konfiguration
+		besser vergleichen zu können auch angeführt: \\
+		$P_\text{MPP} \dots$ Leistung am MPP         \\
+		$I_\text{MPP} \dots$ Strom am MPP            \\
+		$U_\text{MPP} \dots$ Spannung am MPP         \\
+		$P_0 \dots$ Zugeführte Strahlungsfluss       \\
+		$\eta \dots$ Wirkungsgrad
+	}\label{fig:ausw_kennlinie_hell_lampe2}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.95\textwidth]{figures/hellled.pdf}
-	\caption{}\label{fig:ausw_kennlinie_hell_led}
+	\caption{Untersuchung der Strom-Spannungs Kennlinie
+		(links) und Leistungskennlinie (rechts) bei einer
+		Bestrahlungsstärke der Solarzelle von \SI{1040(120)}{\watt\per\meter\squared}
+		mittels einer bläulichen LED-Lampe.
+		Folgende Größen wurden errechnet und um Effizienz für diese Konfiguration
+		besser vergleichen zu können auch angeführt: \\
+		$P_\text{MPP} \dots$ Leistung am MPP         \\
+		$I_\text{MPP} \dots$ Strom am MPP            \\
+		$U_\text{MPP} \dots$ Spannung am MPP         \\
+		$P_0 \dots$ Zugeführte Strahlungsfluss       \\
+		$\eta \dots$ Wirkungsgrad
+	}\label{fig:ausw_kennlinie_hell_led}
 \end{figure}
 
 \section{Diskussion}\label{sec:diskussion}
@@ -865,8 +910,15 @@ mal drauf scheinen lassen damit sich eine betriebstemperatur einstellen kann
 
 \subsection{Diodenparameter und Wirkungsgrad einer Solarzelle}
 
+Dunkelkennlinie hat die meisten Parameter null wie $I_{ph}$, was auch mit der
+Erwartung übereinstimmt
+
 techinque um die Watt messung wahrheitsgetreuer zu machen mit dem sensor punkte
 abfahren und ein mittel für die linie erstellen
+
+Bläuliche Lampe Energie wird schlechter auf genommen von der Solarzellen
+deswegen trotz der hohen Bestrahlungsstärke wird kaum was konvertiert, da
+solarzellen für das Sonnenabstrahlungsspektrum optimiert werden.
 
 \section{Zusammenfassung}\label{sec:zusammenfassung}
 
